--- a/css/contact.css
+++ b/css/contact.css
@@ -8,6 +8,10 @@ body{
     color: black;
 }
 
+.nav, .sidenav{
+    display: none !important;
+}
+
 .section{
     padding: 25px;
 }
@@ -209,8 +213,14 @@ body{
 
 /*partie responsive*/
 
-@media screen and (max-width: 450px){
-    
+@media screen and (max-width: 480px){
+
+    .nav, .sidenav{
+        display:initial !important;
+        color: #fff;
+        font-size: 30px;
+    }
+
     .conteneur .titre img{
         margin-left: -30%;
         width: 80px;
@@ -284,6 +294,10 @@ body{
         text-align:left;
         color: #181717;
         font-size: 15px;
+    }
+
+    .tête .menu{
+        display: none !important;
     }
 }        
 
