--- a/css/contact.css
+++ b/css/contact.css
@@ -208,17 +208,21 @@ body{
 .pied{
     background-color: #0F2243;
     color:#fff;
-    padding: 40px;
+    padding: 30px;
 }
 
 /*partie responsive*/
 
-@media screen and (max-width: 450px){
+@media screen and (max-width: 870px){
 
     .nav, .sidenav{
         display:initial !important;
         color: #fff;
         font-size: 30px;
+    }
+
+    .nav{
+        margin-left: 100%;
     }
 
     .conteneur .titre img{
@@ -246,7 +250,7 @@ body{
     }
     
     .section1 .imgmbr input,#pays,#text3{
-        width: 400px;
+        width: 390px;
     }
 
     .section1 p{
@@ -261,8 +265,7 @@ body{
 
     .section2 .conteneur .img_txt {
         width: 150%;
-        display: flex;
-        
+        display: flex;    
     }
 
     
@@ -273,7 +276,7 @@ body{
         color: #fff;
         padding:9px;
         border-radius: 100px;
-        width: 420px;
+        width: 99%;
         margin-bottom: 1%;
         margin-top: 1%;
         margin-left: -1px;
@@ -288,7 +291,7 @@ body{
         border-radius: 100px;
         border-style:inherit;
         border-color: #706b6d;
-        width: 420px;
+        width: 99%;
         margin-bottom: 2%;
         margin-left: -1px;
         text-align:left;
