--- a/css/cours.css
+++ b/css/cours.css
@@ -193,7 +193,7 @@ body{
 .pied{
     background-color: #0F2243;
     color:#fff;
-    padding: 40px;
+    padding: 30px;
 }
 
 /*partie responsive*/
@@ -204,6 +204,10 @@ body{
         display:initial !important;
         color: #fff;
         font-size: 30px;
+    }
+
+    .nav{
+        margin-left: 100%;
     }
 
     .conteneur .titre img{
@@ -218,7 +222,7 @@ body{
     }
 
     .section1 .conteneur img{
-        width: 400px;
+        width: 380px;
         height: 300px;  
     }
 
@@ -238,14 +242,14 @@ body{
         
     }
 
-    .btn{
+    .btn,.btn2{
         text-decoration: none;
         font-weight:400;
         background-color:#d1137b;
         color: #fff;
-        padding:8px;
+        padding:9px;
         border-radius: 100px;
-        width: 420px;
+        width: 99%;
         margin-bottom: 1%;
         margin-top: 1%;
         margin-left: -1px;
@@ -253,20 +257,21 @@ body{
         transition: all 0.2s;
         content: '';    
     }
-    
+
     .zonemail input{
         background-color:#d4d0d2;
         padding:15px;
         border-radius: 100px;
         border-style:inherit;
         border-color: #706b6d;
-        width: 420px;
+        width: 99%;
         margin-bottom: 2%;
         margin-left: -1px;
         text-align:left;
         color: #181717;
         font-size: 15px;
     }
+
     
     .tête .menu{
         display: none !important;
